--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    id 'java'
 }
 
 group 'org.example'
@@ -8,9 +9,16 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.github.horitaku1124.kotlin.Main'
+        )
+    }
+}
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.70"
 }
 
 compileKotlin {
