--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,10 @@ jar {
                 'Main-Class': 'com.github.horitaku1124.kotlin.Main'
         )
     }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.70"
 }
 
 compileKotlin {
