--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,13 @@ jar {
 }
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
 }
 
+test {
+    useJUnitPlatform()
+}
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
